mkl/src/imports/cblas/CBLAS.cs


        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_dspmv(BlasLayout Layout, BlasUpLo Uplo,
                        int N, double alpha, ref double Ap,
                        ref double X, int incX,
                        double beta, ref double Y, int incY);
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_dger(BlasLayout Layout, int M, int N,
                        double alpha, ref double X, int incX,
                        ref double Y, int incY, ref double A, int lda);
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_dsyr(BlasLayout Layout, BlasUpLo Uplo,
                        int N, double alpha, ref double X,
                        int incX, ref double A, int lda);
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_dspr(BlasLayout Layout, BlasUpLo Uplo,
                        int N, double alpha, ref double X,
                        int incX, ref double Ap);
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_dsyr2(BlasLayout Layout, BlasUpLo Uplo,
                        int N, double alpha, ref double X,
                        int incX, ref double Y, int incY, ref double A,
                        int lda);
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_dspr2(BlasLayout Layout, BlasUpLo Uplo,
                        int N, double alpha, ref double X,
                        int incX, ref double Y, int incY, ref double A);

        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_chemv(BlasLayout Layout, BlasUpLo Uplo,
                        int N, ref byte alpha, ref byte A,
                        int lda, ref byte X, int incX,
                        ref byte beta, ref byte Y, int incY);
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_chbmv(BlasLayout Layout, BlasUpLo Uplo,
                        int N, int K, ref byte alpha, ref byte A,
                        int lda, ref byte X, int incX,
                        ref byte beta, ref byte Y, int incY);
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_chpmv(BlasLayout Layout, BlasUpLo Uplo,
                        int N, ref byte alpha, ref byte Ap,
                        ref byte X, int incX,
                        ref byte beta, ref byte Y, int incY);
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_cgeru(BlasLayout Layout, int M, int N,
                        ref byte alpha, ref byte X, int incX,
                        ref byte Y, int incY, ref byte A, int lda);
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_cgerc(BlasLayout Layout, int M, int N,
                        ref byte alpha, ref byte X, int incX,
                        ref byte Y, int incY, ref byte A, int lda);
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_cher(BlasLayout Layout, BlasUpLo Uplo,
                        int N, float alpha, ref byte X, int incX,
                        ref byte A, int lda);
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_chpr(BlasLayout Layout, BlasUpLo Uplo,
                        int N, float alpha, ref byte X,
                        int incX, ref byte A);
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_cher2(BlasLayout Layout, BlasUpLo Uplo, int N,
                        ref byte alpha, ref byte X, int incX,
                        ref byte Y, int incY, ref byte A, int lda);
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_chpr2(BlasLayout Layout, BlasUpLo Uplo, int N,
                        ref byte alpha, ref byte X, int incX,
                        ref byte Y, int incY, ref byte Ap);

        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_zhemv(BlasLayout Layout, BlasUpLo Uplo,
                        int N, ref byte alpha, ref byte A,
                        int lda, ref byte X, int incX,
                        ref byte beta, ref byte Y, int incY);

        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_zhbmv(BlasLayout Layout, BlasUpLo Uplo,
                        int N, int K, ref byte alpha, ref byte A,
                        int lda, ref byte X, int incX,
                        ref byte beta, ref byte Y, int incY);
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_zhpmv(BlasLayout Layout, BlasUpLo Uplo,
                        int N, ref byte alpha, ref byte Ap,
                        ref byte X, int incX,
                        ref byte beta, ref byte Y, int incY);
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_zgeru(BlasLayout Layout, int M, int N,
                        ref byte alpha, ref byte X, int incX,
                        ref byte Y, int incY, ref byte A, int lda);
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_zgerc(BlasLayout Layout, int M, int N,
                        ref byte alpha, ref byte X, int incX,
                        ref byte Y, int incY, ref byte A, int lda);
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_zher(BlasLayout Layout, BlasUpLo Uplo,
                        int N, double alpha, ref byte X, int incX,
                        ref byte A, int lda);
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_zhpr(BlasLayout Layout, BlasUpLo Uplo,
                        int N, double alpha, ref byte X,
                        int incX, ref byte A);
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_zher2(BlasLayout Layout, BlasUpLo Uplo, int N,
                        ref byte alpha, ref byte X, int incX,
                        ref byte Y, int incY, ref byte A, int lda);
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_zhpr2(BlasLayout Layout, BlasUpLo Uplo, int N,
                        ref byte alpha, ref byte X, int incX,
                        ref byte Y, int incY, ref byte Ap);

        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_sgemm_batch(BlasLayout Layout, ref BlasTrans TransA_Array,
                            ref BlasTrans TransB_Array, ref int M_Array, ref int N_Array,
                            ref int K_Array, ref float alpha_Array, ref float A_Array,
                            ref int lda_Array, ref float B_Array, ref int ldb_Array,
                            ref float beta_Array, ref float C_Array, ref int ldc_Array,
                            int group_count, ref int group_size);

        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_dgemm_batch(BlasLayout Layout, ref BlasTrans TransA_Array,
                            ref BlasTrans TransB_Array, ref int M_Array, ref int N_Array,
                            ref int K_Array, ref double alpha_Array, ref double A_Array,
                            ref int lda_Array, ref double B_Array, ref int ldb_Array,
                            ref double beta_Array, ref double C_Array, ref int ldc_Array,
                            int group_count, ref int group_size);

        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_sgemmt(BlasLayout Layout, BlasUpLo Uplo, BlasTrans TransA, BlasTrans TransB,
                int N, int K, float alpha, ref float A, int lda, ref float B, int ldb, float beta, ref float C, int ldc);

        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_ssymm(BlasLayout Layout, BlasSide Side,
                        BlasUpLo Uplo, int M, int N,
                        float alpha, ref float A, int lda,
                        ref float B, int ldb, float beta,
                        ref float C, int ldc);
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_ssyrk(BlasLayout Layout, BlasUpLo Uplo,
                        BlasTrans Trans, int N, int K,
                        float alpha, ref float A, int lda,
                        float beta, ref float C, int ldc);
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_ssyr2k(BlasLayout Layout, BlasUpLo Uplo,
                        BlasTrans Trans, int N, int K,
                        float alpha, ref float A, int lda,
                        ref float B, int ldb, float beta,
                        ref float C, int ldc);
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_strmm(BlasLayout Layout, BlasSide Side, BlasUpLo Uplo, BlasTrans TransA, BlasDiagonal Diag, 
            int M, int N, float alpha, ref float A, int lda, ref float B, int ldb);

        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_strsm(BlasLayout Layout, BlasSide Side, BlasUpLo Uplo, BlasTrans TransA, BlasDiagonal Diag, 
            int M, int N, float alpha, ref float A, int lda, ref float B, int ldb);
        
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_strsm_batch(BlasLayout Layout, ref BlasSide Side_Array,
                            ref BlasUpLo Uplo_Array, ref BlasTrans TransA_Array,
                            ref BlasDiagonal Diag_Array, ref int M_Array,
                            ref int N_Array, ref float alpha_Array,
                            ref float A_Array, ref int lda_Array,
                            ref float B_Array, ref int ldb_Array,
                            int group_count, ref int group_size);

